test/spec_vectors/memory/ok/module_9.wat
(module (memory (data "x")) (func (export "memsize") (result i32) (memory.size)))