test/spec_vectors/memory/fail/module_16.wat
(module (func (i32.store8 (i32.const 0) (i32.const 0))))